modificando nombre de clases